@@ -24,6 +24,8 @@
         <gae.stop.port>8081</gae.stop.port>
         <gae.port>8888</gae.port>
         <gae.address>127.0.0.1</gae.address>
+
+        <resteasy.version>3.0-beta-4</resteasy.version>
     </properties>
 
     <build>
@@ -73,28 +75,11 @@
                 </configuration>
             </plugin>
 
-            <!-- GWT -->
-            <!-- First run 'mvn package -Ppostgres' to setup persistence.xml -->
-            <!-- run 'mvn gwt:run' for running application from terminal -->
-            <!-- run 'mvn integration-test' for running the GwtTestSuite -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
                 <version>${gwt-maven-plugin.version}</version>
                 <configuration>
-                    <gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
-
-                    <strict>true</strict>
-                    <testTimeOut>180</testTimeOut>
-                    <!-- With multiple tests use GwtTestSuite.java for speed -->
-                    <includes>**/*GwtTest.java</includes>
-                    <!-- <includes>**/*GwtTestSuite.java</includes> -->
-                    <mode>htmlunit</mode>
-
-                    <extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=256M</extraJvmArgs>
-                    <logLevel>INFO</logLevel>
-                    <style>${gwt.style}</style>
-
                     <copyWebapp>true</copyWebapp>
                     <hostedWebapp>${webappDirectory}</hostedWebapp>
 
@@ -106,8 +91,6 @@
                     <modules>
                         <module>com.gwtplatform.carstore.CarStore</module>
                     </modules>
-
-                    <compileReport>true</compileReport>
                 </configuration>
                 <executions>
                     <execution>
@@ -118,10 +101,58 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>${maven-checkstyle-plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
     <dependencies>
+        <!-- GWTP -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gwtp-mvp-client</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gwtp-dispatch-client</artifactId>
+            <version>${project.version}</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gwtp-dispatch-server-guice</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gwtp-crawler</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gwtp-crawler-service</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gwtp-processors</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gwtp-dispatch-rest</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- GWT -->
         <dependency>
             <groupId>com.google.gwt</groupId>
@@ -163,40 +194,6 @@
             <artifactId>appengine-testing</artifactId>
             <version>${gae.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <!-- GWTP -->
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>gwtp-mvp-client</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>gwtp-dispatch-client</artifactId>
-            <version>${project.version}</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>gwtp-dispatch-server-guice</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>gwtp-crawler</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>gwtp-crawler-service</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>gwtp-processors</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
         <!-- DI Guice -->
@@ -249,7 +246,24 @@
             <artifactId>jbcrypt</artifactId>
             <version>${jbcrypt.version}</version>
         </dependency>
-        
+
+        <!-- REST -->
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-guice</artifactId>
+            <version>${resteasy.version}</version>
+        </dependency>
+
         <!-- Selenium Testing -->
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
@@ -295,7 +309,7 @@
             <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
-        
+
         <!-- JUnit Testing -->
         <dependency>
             <groupId>org.jukito</groupId>
@@ -308,8 +322,18 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
+        <dependency>
+            <groupId>name.pehl</groupId>
+            <artifactId>piriti-user</artifactId>
+            <version>${piriti.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>name.pehl</groupId>
+            <artifactId>piriti-dev</artifactId>
+            <version>${piriti.version}</version>
+        </dependency>
+    </dependencies>
 
     <profiles>
         <!-- 'mvn gwt:compile jetty:run -Pintegration-test' - test run cucumber story from ide -->
@@ -317,11 +341,9 @@
             <id>integration-test</id>
             <build>
                 <plugins>
-                    <!-- TODO Workaround for background runner. Remove on release -->
                     <plugin>
                         <groupId>net.kindleit</groupId>
                         <artifactId>maven-gae-plugin</artifactId>
-                        <version>0.9.6-SNAPSHOT</version>
                         <configuration>
                             <appDir>${webappDirectory}</appDir>
                         </configuration>
@@ -343,7 +365,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                
+
                     <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>gwt-maven-plugin</artifactId>
@@ -364,12 +386,8 @@
                                 <phase>integration-test</phase>
                                 <goals>
                                     <goal>integration-test</goal>
+                                    <goal>verify</goal>
                                 </goals>
-                                <configuration>
-                                    <includes>
-                                        <include>**/*TestInt.java</include>
-                                    </includes>
-                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
